@@ -1,47 +1,0 @@
-partman-auto/text/multi_scheme ::
-
-8 1 1 boot-prep
-	$primary{ }
-	$bootable{ }
-	method{ prep } .
-
-70 800 280 ext3
-	$primary{ }
-	method{ format }
-	format{ }
-	use_filesystem{ }
-	filesystem{ ext3 }
-	mountpoint{ / } .
-
-500 3000 5000 ext3
-	method{ format }
-	format{ }
-	use_filesystem{ }
-	filesystem{ ext3 }
-	mountpoint{ /usr } .
-
-70 1500 3000 ext3
-	method{ format }
-	format{ }
-	use_filesystem{ }
-	filesystem{ ext3 }
-	mountpoint{ /var } .
-
-64 512 300% linux-swap
-	method{ swap }
-	format{ } .
-
-20 300 400 ext3
-	method{ format }
-	format{ }
-	use_filesystem{ }
-	filesystem{ ext3 }
-        mountpoint{ /tmp } .
-
-300 3000 1000000000 ext3
-	method{ format }
-	format{ }
-	use_filesystem{ }
-	filesystem{ ext3 }
-	mountpoint{ /home } .
-
