@@ -20,6 +20,9 @@ partman-auto (46) UNRELEASED; urgency=low
   * Add a smalldisk recipe for alpha, so that systems with little disk space
     can use a single ext2 partition for the whole install (closes: #261182).
 
+  [ Colin Watson ]
+  * Remove duplicated chrp_rs6k recipes and install a symlink instead.
+
  -- Steve Langasek <vorlon@debian.org>  Wed, 16 Nov 2005 15:35:46 -0800
 
 partman-auto (45) unstable; urgency=low
